@@ -110,15 +110,13 @@ foreach my $i (@events_to_check){
             $already_treated_host{$j} = 1;
             my @free_resources = iolib::get_current_free_resources_of_node($base, $j);
             if ($#free_resources >= 0){
-                oar_warn("[NodeChangeState] There was an error ($i->{type}) on the node $j SO we are suspecting resource(s) : @free_resources\n");
                 foreach my $r (@free_resources){
                     iolib::set_resource_state($base,$r,"Suspected",$finaud_tag);
                     $Exit_code = 1;
                 }
-            }else{
-                oar_warn("[NodeChangeState] There was an error ($i->{type}) on the node $j BUT we cannot Suspect this node because all resources are busy\n");
             }
         }
+        oar_warn("[NodeChangeState] error ($i->{type}) on the nodes @hosts so we are suspecting corresponding free resources\n");
     }
     
     ########################################
@@ -287,18 +285,15 @@ if (keys(%resources_to_change) > 0){
     $Exit_code = 1;
 }
 
+my %debug_info;
 foreach my $i (keys(%resources_to_change)){
     my $resource_info = iolib::get_resource_info($base,$i);
     if ($resource_info->{state} ne $resources_to_change{$i}){
-        if ($resource_info->{next_finaud_decision} eq "YES"){
-            oar_warn("[NodeChangeState] Finaud is automatically changing the state of the resource $i ($resource_info->{network_address}) into $resources_to_change{$i}\n");
-        }else{
-            oar_warn("[NodeChangeState] ($resource_info->{network_address}) $i --> $resources_to_change{$i}\n");
-        }
-
         iolib::set_resource_state($base,$i,$resources_to_change{$i},$resource_info->{next_finaud_decision});
         iolib::set_resource_nextState($base,$i,'UnChanged');
 
+        $debug_info{$resource_info->{network_address}}->{$i} = $resources_to_change{$i};
+        
         if (($resources_to_change{$i} eq 'Dead') || ($resources_to_change{$i} eq 'Absent')){
             oar_debug("[NodeChangeState] Check jobs to delete on $i ($resource_info->{network_address}):\n");
             my @jobs = iolib::get_resource_job($base,$i);
@@ -311,10 +306,21 @@ foreach my $i (keys(%resources_to_change)){
             oar_debug("[NodeChangeState] Check done\n");
         }
     }else{
-        oar_warn("[NodeChangeState] ($resource_info->{network_address}) $i is already in the $resources_to_change{$i} state\n");
+        oar_debug("[NodeChangeState] ($resource_info->{network_address}) $i is already in the $resources_to_change{$i} state\n");
         iolib::set_resource_nextState($base,$i,'UnChanged');
     }
 }
+
+my $str;
+foreach my $h (keys(%debug_info)){
+    $str .= "\n$h";
+    foreach my $r (keys(%{$debug_info{$h}})){
+        $str .= "\n\t$r --> $debug_info{$h}->{$r}";
+    }
+    $str .= "\n";
+}
+oar_warn("[NodeChangeState] Resource state changes requested:\n$str\n") if (defined($str));
+
 iolib::unlock_table($base);
 iolib::disconnect($base);
 
