@@ -34,7 +34,7 @@ sub answer($$$){
     if(!defined(oar_Tools::notify_tcp_socket($addr,$port,"$message"))){
         oar_debug("[Runner] Notification done\n");
     }else{
-        oar_error("[Runner] Cannot open connection to oarsub client for job $jobid !\n");
+        oar_debug("[Runner] Cannot open connection to oarsub client for job $jobid !\n");
         $error = 1;
     }
     return($error);
